--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <body>
     <h1>Monstr Inc.</h1>
     <div id='create-monster'></div>
+      
     <div id='monster-container'></div>
     <button id="back"><=</button>
     <button id="forward">=></button>
-    <!-- <script src='js/index.js'></script> -->
-    <script src='js/demo.js'></script>
+    <script src='js/index.js'></script>
+    <!-- <script src='js/demo.js'></script> -->
   </body>
 </html>
